Video sizing and bkg on mobile css fix

--- a/src/sass/components/_content.scss
+++ b/src/sass/components/_content.scss
@@ -2108,8 +2108,15 @@
   }
 
   @include max($btablet) {
-    min-height: 465px;
-    padding-top: 70px;
+    min-height: 165px;
+    width: 100%;
+    padding: 5px 0;
+    & .video-wrapper {
+      width: 100%;
+    }
+      .container {
+      padding: 0 5px;
+    }
   }
   .btn {
     margin-left: -8px;
